# Agroalimentary-Quality-Control

./: .gitignore  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
agroalimentary_quality_control/: bin_col_name.py
agroalimentary_quality_control/dataset/: augment.py  augmented_picture_path.py  binning.py  split.py  transform.py
agroalimentary_quality_control/modeling/: dataset.py  evaluate.py  fit.py  regressor.py  splits_iteration.py
notebooks/: binning.ipynb  correlation.ipynb  data.ipynb  kfolds.ipynb  loader.ipynb  rse.ipynb  train.ipynb
