[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agroalimentary_quality_control"
version = "0.0.1"
description = "Computer vision system which estimates levels of ammonia and chlorophyll from pictures of vegetables."
authors = [
  { name = "Gianmarco Turchiano" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["agroalimentary_quality_control"]
force_sort_within_sections = true
